Change contact partial name to contact-form.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -25,7 +25,7 @@
   <body>
     <div id="about-header">
       <img src="images/logo.png" class="logo-upper-left"/>
-      {% include contact.html %}
+      {% include contact-form.html %}
       <div class="ham-menu"></div>
       <div class="nav-modal">
         <div class="inner">
