--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -30,7 +30,7 @@
     });</script>
   </head>
   <body>
-    {% include contact.html data=site.data.contact %}
+    {% include contact-form.html %}
     <div id="top-nav">
       <ul>
         <li><a href="listings.html">LISTINGS</a></li>
