--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -29,7 +29,7 @@
     });</script>
   </head>
   <body>
-    {% include contact.html %}
+    {% include contact-form.html %}
     <div class="nav-modal">
       <div class="inner">
         <img src="images/logo.png" class="modal-logo"/>
