--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -3,9 +3,9 @@
     <div class="contact-close"></div>
     <div class="form">
       <p class="contact-us">CONTACT US</p>
-      <input type="text" placeholder=" Name">
-      <input type="text" placeholder=" Address">
-      <input type="text" placeholder=" Email">
+      <input type="text" placeholder="Name">
+      <input type="text" placeholder="Phone">
+      <input type="text" placeholder="Email">
       <button>SUBMIT</button>
     </div>
   </div>
