--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="ham-menu"></div>
-    {% include contact.html %}
+    {% include contact-form.html %}
     <div class="nav-modal">
       <div class="inner">
         <img src="/images/logo.png" class="modal-logo"/>
