Fix syntax error in scss. Move contact-information into its own partial.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -60,7 +60,7 @@ a {
       font-size: 3em;
       background-color: white;
       padding: 1em;
-      padding-left: calc(80px - 12px;);
+      padding-left: calc(80px - 12px);
     }
     .contact-body {
       font-size: 1.3em;
