Restore old contact-us-home-section.

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -1,4 +1,4 @@
-<div class="contact-body">
+<div class="contact-info-body">
    <div class="contact-row">
     <div><img src="images/phone-icon.png" class="icon-small"/>{{site.data.contact.phone}}</div>
     <div><img src="images/location-icon.png" class="icon-small"/><span class="underline">{{site.data.contact.address}}</span></div>
