--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -102,23 +102,23 @@
           </div>
           <div class="services-row">
             <div class="services-1 services-text">
-                <div class="medium-white-text"><strong>INVESTMENT</strong> SALES</div>
+                <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
                 <div class="service-description">
-                  Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+                  {{ page.tennant_service_text }}
                 </div>
                 <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
               </div>
             <div class="services-2 services-text">
-              <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
+              <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
               <div class="service-description">
-                Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+                  {{ page.landlord_service_text }}
               </div>
               <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
             </div>
             <div class="services-text">
-              <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
+              <div class="medium-white-text"><strong>INVESTMENT</strong> SALES</div>
               <div class="service-description">
-                We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+                {{ page.investment_service_text }}
               </div>
               <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
             </div>
