Place listings header and subheader into variable.

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -4,8 +4,8 @@
     <div class="form">
       <p class="contact-us">CONTACT US</p>
       <input type="text" placeholder="Name">
-      <input type="text" placeholder="Phone">
       <input type="text" placeholder="Email">
+      <input type="text" placeholder="Phone Number">
       <button>SUBMIT</button>
     </div>
     {% include contact-info.html %}
