--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -48,9 +48,9 @@
       <div class="ham-menu"></div>
       <div class="content">
         <div class="header">
-          <h4>LOREM IPSUM DOLOR SIT AMET</h4>
+          <h4>{{page.header}}</h4>
           <p>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+            {{page.subheader}}
           </p>
 
           <input type="text" placeholder="    Search properties" class="listings-search" id="listings-text-search">
