--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -72,7 +72,7 @@
             </p>
           </div>
         </div>
-        <div class="home-intro-right"></div>
+        <div class="home-intro-right" style="background-image: url('{{page.home_intro_image}}')"></div>
       </div>
       <div class="review-slideshow">
         <div class="inner">
