Replace home background image with new asset from Paul.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -353,7 +353,7 @@ a {
 
 #header-home {
   position: relative;
-  background-image: url(../images/background.png);
+  background-image: url(../images/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center 0;
