--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -65,9 +65,14 @@
             <div class="footer">
               <p>FEATURED LISTINGS</p>
               <div class="featured-listings">
-                <img src="images/about/prop1.png" class="agent-featured-listing"/>
-                <img src="images/about/prop2.png" class="agent-featured-listing"/>
-                <img src="images/about/prop3.png" class="agent-featured-listing"/>
+                {% for agent_listing in agent.featured_listings %}
+                  {% assign listing = site.listings | where: "title", agent_listing | first %}
+                    {% if listing.property-preview-image %}
+                      <img src="{{listing.property-preview-image}}" class="agent-featured-listing"/>
+                    {% else %}
+                      <img src="/images/placeholder-thumbnail.jpg" class="agent-featured-listing"/>
+                    {% endif %}
+                {% endfor %}
               </div>
             </div>
           </div>
