--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="services-row">
             <div class="services-1 services-text">
-                <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
+                <div class="medium-white-text"><strong>TENANT</strong> REPRESENTATION</div>
                 <div class="service-description">
                   {{ page.tennant_service_text }}
                 </div>
