--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -62,8 +62,13 @@
               <h2>about {{agent.first_name}}</h2>
               <p>{{agent.full_bio}}</p>
             </div>
+            {% if agent.featured_listings %}
             <div class="footer">
-              <p>FEATURED LISTINGS</p>
+              {% if agent.featured_listings[1] %}
+                <p>FEATURED LISTINGS</p>
+              {% else %}
+                <p>FEATURED LISTING</p>
+              {% endif %}
               <div class="featured-listings">
                 {% for agent_listing in agent.featured_listings %}
                   {% assign listing = site.listings | where: "title", agent_listing | first %}
@@ -77,6 +82,7 @@
                 {% endfor %}
               </div>
             </div>
+            {% endif %}
           </div>
         </div>
       {% endfor %}
