Put the contact-us form into a real form element.

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,13 +1,13 @@
 <div class="contact-us-modal">
   <div class="contact-form">
     <div class="contact-close"></div>
-    <div class="form">
+    <form action="mailto:TODO" class="form">
       <p class="contact-us">CONTACT US</p>
       <input type="text" placeholder="Name">
       <input type="text" placeholder="Email">
       <input type="text" placeholder="Phone Number">
       <button>SUBMIT</button>
-    </div>
+    </form>
     {% include contact-info.html %}
   </div>
 </div>
