--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -26,6 +26,8 @@ a {
     position: relative;
     margin: 0 5px;
     padding: 0;
+    width: 15px;
+    height: 15px;
     cursor: pointer;
     &.slick-active {
       > button {
@@ -34,12 +36,13 @@ a {
       }
     }
     > button {
-      width: 20px;
-      height: 20px;
-      border-radius: 500px;
+      width: 100%;
+      height: 100%;
+      border-radius: 100px;
       border-style: solid;
       border-color: $primary-color-darker;
       color: transparent;
+      padding: 0;
     }
   }
 }
