--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -250,6 +250,53 @@ a {
   display: none;
 }
 
+#form-submit-loader {
+  padding: 10px;
+  display: none;
+}
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 3px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid #858585;
+  border-right: 1.1em solid #858585;
+  border-bottom: 1.1em solid #858585;
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 .contact-us-modal {
   display: none;
   position: fixed;
@@ -554,6 +601,7 @@ a {
     border-style: solid;
     border-radius: 500px;
     border-color: white;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
   }
 }
 
