Fix problem with email validator not appearing. Add an error message and display it if the ajax request fails.

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -12,9 +12,12 @@
     <div id="form-submit-loader">
       <div class="loader">Loading...</div>
     </div>
-    <div id="thankyou_message">
+    <div id="thankyou_message" class="contact-form-status">
       <img src="/images/icons/okay.png" />
       <p>Thanks! We'll be in touch</p>
+    </div>
+    <div id="error_message" class="contact-form-status">
+      <p>Sorry, an error occurred.</p>
     </div>
     {% include contact-info.html %}
   </div>
