Slightly restyle the testimomnials.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -21,6 +21,7 @@ a {
 .slick-dots {
   display: inline-block;
   list-style-type: none;
+  margin-bottom: 0;
   > li {
     display: inline-block;
     position: relative;
@@ -556,7 +557,7 @@ a {
 
 .navigation-arrows {
   position: absolute;
-  top: 47%;
+  top: 35%;
   border: solid $primary-color;
   border-width: 0 2px 2px 0;
   padding: 3px;
@@ -568,12 +569,12 @@ a {
 
 .navigation-arrow-left {
   transform: rotate(135deg);
-  left: 5%;
+  left: 14%;
 }
 
 .navigation-arrow-right {
   transform: rotate(-45deg);
-  right: 5%;
+  right: 14%;
 }
 
 .review-slideshow {
@@ -581,7 +582,7 @@ a {
   color: gray;
   text-align: center;
   font-size: 1.5em;
-  padding: 43px 12px;
+  padding: 28px 12px;
   .inner {
     position: relative;
     max-width: 1200px;
@@ -599,7 +600,7 @@ a {
   img {
     display: inline-block;
     margin-right: 22px;
-    margin-top: -7%;
+    margin-top: -4%;
     z-index: 25;
     width: 100px;
     border-style: solid;
