Remove box-shadow and outline from review buttons.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -56,7 +56,7 @@
     <div id="header-home">
       <div id="header-content">
         <img id="header-logo" src="images/logo.png" alt=""/>
-        <div id="header-text"><strong>LOCAL BY CHOICE, NOT BY CHANCE</strong></div>
+        <div id="header-text">LOCAL BY CHOICE, NOT BY CHANCE</div>
       </div>
       <img src="images/scroll-arrow.png" class="scroll-arrow"/>
     </div>
