Restyle about page based on Russ's notes.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -26,9 +26,9 @@
     }
 
     .description {
-      width: 40%;
+      width: 50%;
       vertical-align: bottom;
-      padding: 0 2em;
+      padding-left: 14vw;
       padding-top: 181px;
 
       > p {
@@ -152,7 +152,7 @@
 
   .about-text {
     width: 100%;
-    padding-top: 167px;
+    padding-top: 55px;
     .header-image {
       width: 50%;
       display: inline-block;
