--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -55,7 +55,7 @@
     </div>
     <div id="header-home">
       <div id="header-content">
-        <img id="header-logo" src="images/logo.png" alt=""/>
+        <img id="header-logo" src="images/home-logo.png" alt=""/>
         <div id="header-text">LOCAL BY CHOICE, NOT BY CHANCE</div>
       </div>
       <img src="images/scroll-arrow.png" class="scroll-arrow"/>
