--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,13 +49,13 @@
             <div class="header">
               <img src="{{agent.avatar}}" class="bio-pic"/>
               <div class="contact">
-                <h4>{{agent.first_name}} {{agent.last_name}}</h4>
                 <img src="{{agent.avatar}}" class="bio-pic-mobile"/>
+                <h4>{{agent.first_name}} {{agent.last_name}}</h4>
                 <p class="no-margin">{{agent.position}}</p>
+                <br />
                 <p class="no-margin"><a href="mailto:{{agent.email}}">{{agent.email}}</a></p>
                 <p class="no-margin">M: {{agent.phone}}</p>
-
-                <button class="rounded-red-button">work with {{agent.first_name}}</buton>
+                <a href="mailto:{{agent.email}}"><button class="rounded-red-button">work with {{agent.first_name}}</buton></a>
               </div>
             </div>
             <div class="bio">
