--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -46,15 +46,16 @@
 
   .rounded-red-button {
     border-radius: 500px;
-    margin-top: 4px;
+    margin-top: 13px;
     font-weight: 500;
-    font-size: .9em;
+    font-size: .7em;
     color: $primary-color-darker-darker;
     border-color: $primary-color-darker-darker;
     border-style: solid;
     border-width: thin;
     padding: 5px 20px;
     text-transform: uppercase;
+    text-decoration: none;
   }
 
   .view-listing-button {
@@ -96,26 +97,34 @@
         .bio-pic {
           position: absolute;
           left: -10px;
-          height: 100%;
+          height: 127px;
         }
         .contact {
-          margin-left: 34%;
+          margin-left: 36%;
           display: inline-block;
+          a {
+            text-decoration: none;
+          }
           > p {
             margin-top: 0;
             margin-bottom: 0;
+            > a {
+              text-decoration: underline;
+            }
           }
           > h4 {
             color: #3e3e3e;
             font-weight: 100;
             font-size: 1.8em;
-            margin-bottom: 5px;
+            margin-bottom: 0;
+            margin-top: 12px;
           }
         }
       }
       .bio {
-        margin: 0 50px;
+        margin: 0 25px;
         padding-bottom: 12px;
+        padding-top: 1px;
         color: black;
         opacity: .55;
         line-height: 110%;
@@ -124,6 +133,7 @@
           font-size: 1.8em;
           opacity: 1;
           text-transform: uppercase;
+          margin-top: 8px;
         }
       }
       .footer {
@@ -131,6 +141,11 @@
         color: white;
         text-align: center;
         padding: 1px 0 0 0;
+        line-height: 1.5;
+        > p {
+          margin: 7px;
+          font-size: 1.4em;
+        }
         .featured-listings {
           width: 100%;
           height: 100%;
@@ -139,7 +154,7 @@
           justify-content: center;
           .agent-featured-listing {
             width: 33.33%;
-            height: 160px;
+            height: 140px;
             position: relative;
             background-image: url("/images/placeholder-thumbnail.jpg");
             background-size: cover;
@@ -147,7 +162,7 @@
               position: absolute;
               text-decoration: none;
               left: 24%;
-              top: 60px;
+              top: 54px;
             }
           }
         }
