--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -17,13 +17,13 @@
 @mixin close-button {
   background-color: white;
   background-image: url(../images/menu-close.png);
-  background-size: 20px 20px;
+  background-size: 12px 12px;
   background-position: center center;
   background-repeat: no-repeat;
   cursor: pointer;
-  padding: 30px;
+  padding: 16px;
   position: absolute;
-  top: 10px; right: 10px;
+  top: 0; right: 0;
 }
 
 @mixin mobile-logo {
