--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -22,6 +22,7 @@ a {
   display: inline-block;
   list-style-type: none;
   margin-bottom: 0;
+  padding-left: 0;
   > li {
     display: inline-block;
     position: relative;
@@ -78,7 +79,7 @@ a {
 #contact-us-home-section {
   position: relative;
   color: $grey;
-  min-height: 473px;
+  min-height: 349px;
   .contact-us-gmap-container {
     width: 100%;
     height: 100%;
@@ -589,7 +590,7 @@ a {
   }
   p {
     max-width: calc(100% - 200px - 120px); // 200px img, 60px*2 padding
-    padding: 12px 0;
+    padding: 12px;
     text-align: left;
     display: inline-block;
     strong {
@@ -598,7 +599,6 @@ a {
   }
   img {
     display: inline-block;
-    margin-right: 22px;
     margin-top: -4%;
     z-index: 25;
     width: 100px;
@@ -745,6 +745,13 @@ a {
     font-size: .9em;
   }
 
+  .navigation-arrow-right {
+    right: 5%;
+  }
+
+  .navigation-arrow-left {
+    left: 5%;
+  }
   .contact-row {
     > {
       width: 100%;
@@ -782,6 +789,8 @@ a {
       p {
         width: 100%;
         max-width: 100%;
+        text-align: center;
+        padding: 0;
       }
     }
   }
@@ -810,6 +819,8 @@ a {
     .contact-content {
       position: absolute;
       width: 100%;
+      left: 0;
+      top: 47%;
       .contact-header {
         padding: 25px 0 0 0;
         text-align: center;
@@ -940,7 +951,12 @@ a {
     background: $primary-color;
     padding: 2%;
     color: white;
-    & > * { line-height: 2.2; }
+    .inner {
+      margin-left: 0;
+    }
+    & > * {
+      line-height: 2.2;
+    }
     .column {
       display: block;
       margin-right: 5%;
