Cleanup padding around listing preview tiles.

--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -93,9 +93,9 @@
   }
 
   .listing-preview {
-    width: calc(33% - 10px);
-    margin: 0 12px 12px 0;
-    margin-bottom: 18px;
+    width: 31%;
+    margin: 0 18px 18px 0;
+    margin-bottom: 36px;
     color: gray;
     background-color: white;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
@@ -183,7 +183,7 @@
     position: relative;
     font-size: .9em;
     color: #959595;
-    margin: 35px 0 35px 0;
+    margin: 14px 0 35px 0;
     > div {
       display: inline-block;
       padding: 3px;
