--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,13 +19,13 @@
     </div>
 
     <div class="column social">
-      <a href="#" target="_blank">
+      <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
         <img src="images/social/i.svg"/>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
         <img src="images/social/t.svg"/>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
         <img src="images/social/f.svg"/>
       </a>
     </div>
