Give the social media links some right padding.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -688,7 +688,7 @@ a {
     }
     &.social {
       float: right;
-      margin-right: 0;
+      margin-right: 3px;
       font-size: 1.5em;
       text-align: right;
       line-height: 1;
