--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -95,7 +95,14 @@
       </div>
     </div>
     {% include footer.html %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="../scripts/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script>
+      $('.listing-carousel').slick({
+        "prevArrow": $('.gallery-arrow-left'),
+        "nextArrow": $('.gallery-arrow-right')
+      })
       function initListingMap() {
         var uluru = {lat: {{page.latitude}}, lng: {{page.longitude}}};
         var map = new google.maps.Map(document.getElementById('about-google-map'), {
@@ -110,9 +117,6 @@
         });
       }
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="../scripts/script.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <!-- TODO replace API key -->
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhoAiw62lFQnHpIqeqYJVu1KfRkcitEN0&callback=initListingMap">
