--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -145,8 +145,18 @@
       </div>
       {% include footer.html %}
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="scripts/formSubmit.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <script>
+      $('.review-carousel').slick({
+        "autoplay": false,
+        "draggable": false,
+        "dots": true,
+        "prevArrow": $('.navigation-arrow-left'),
+        "nextArrow": $('.navigation-arrow-right')
+      })
       function initHomeMap() {
         var uluru = {lat: 33.979449, lng: -118.413002};
         var map = new google.maps.Map(document.getElementById('contact-us-gmap'), {
@@ -162,10 +172,6 @@
         });
       }
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-    <script type="text/javascript" src="scripts/formSubmit.js"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
     <!-- TODO replace API key -->
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhoAiw62lFQnHpIqeqYJVu1KfRkcitEN0&callback=initHomeMap">
