Specify height for listing slideshow so that the carousel navigation arrows are always in the correct place.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -75,7 +75,7 @@
               <div class="listing-image-gallery">
                 <div class="listing-carousel">
                   {% for img-src in page.gallery-images %}
-                  <img src={{ img-src }} class="img-responsive"/>
+                  <img src={{ img-src }} class="img-responsive listing-image"/>
                   {% endfor %}
                 </div>
                 <div class="gallery-arrow-container">
