--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -19,6 +19,9 @@
     flex-flow: row wrap;
   }
 
+  .listing-image {
+    height: 365px;
+  }
   .listing-image-gallery {
     width: 50%;
     float: right;
