--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -10,50 +10,46 @@
     <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
-    <div class="ham-menu"></div>
-    {% include contact-form.html %}
-    <div class="nav-modal">
-      <div class="inner">
-        <img src="/images/logo.png" class="modal-logo"/>
-        <div class="menu-close"></div>
-        <ul class="nav">
-          <li><a href="/index.html">HOME</a></li>
-          <li><a href="/listings.html" class="active">LISTINGS</a></li>
-          <li><a href="#">EXPERIENCE</a></li>
-          <li><a href="/about.html">ABOUT </a></li>
-          <li><a class="contact-us-link">CONTACT</a></li>
-        </ul>
+    <div class="print">
+      <div class="header">
+        <img class="logo" src="/images/logo.png"/>
+        <span class="contact"> {{page.address-line-1}} &nbsp; {{page.address-line-2}} | {{page.phone}} | {{page.hours}}
       </div>
-    </div>
-
-    <div id="container-listing" class="container-fluid">
-      <img src="/images/logo.png" class="logo-upper-left"/>
-      {% if page.property-header %}
-        <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
-      {% else %}
-        <div id="header-listings" class="background-header"></div>
-      {% endif %}
-      <div id="listings-content">
-        <div id="header-text-listings">{{ page.location }}</div>
-        <div class="container">
-          <div id="listings-sidebar">
-            <div class="menu-top">
-              <div class="buttons">
-                <a href="#" class="cool-button">CHECK AVAILABILITY</a>
-                <a href="#" class="cool-button">REQUEST BROCHURE</a>
-              </div>
-            </div>
-            <div class="menu">
+      <div class="content">
+        <div class="listing-name">{{page.name}}</div>
+          <div class="gallery">
+            <img src={{ page.gallery-images[0] }} class="img-responsive listing-image"/>
+            <img src={{ page.gallery-images[1] }} class="img-responsive listing-image"/>
+            <img src={{ page.gallery-images[2] }} class="img-responsive listing-image"/>
+          </div>
+        </div>
+        <div class="information">
+          <div class="text">
+            <h4>{{page.info-title}}</h4>
+            <p>{{page.info-text}}</p>
+          </div>
+          <div class="location">
+            <div class="location-header">Location</div>
+            <ul>
+              <li>{{page.address-line-1}}&nbsp; {{page.address-line-2}}</li>
+              <li>{{page.phone}}</li>
+              <li>{{page.hours}}</li>
+            </ul>
+          </div>
+        </div>
+        <div class="features">
+          <div class="menu">
+            <div class="highlights">
               <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
-              <hr class ="light-line">
               <ul class="bond-list">
                 {% for highlight in page.highlights %}
                   <li>{{ highlight }}</li>
                   <hr>
                 {% endfor %}
               </ul>
+            </div>
+            <div class="amenities">
               <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
-              <hr class="light-line">
               <ul class="bond-list">
                 {% for amenity in page.amenities %}
                 <li>{{ amenity }}</li>
@@ -62,39 +58,96 @@
               </ul>
             </div>
           </div>
-          <div id="listings-info">
-            <div class="info-box">
-              <div class="info-text">
-                <h2 class="title">
-                  {{ page.info-title }}
-                </h2>
-                <p>
-                  {{ page.info-text }}
-                </p>
+        </div>
+      </div>
+    </div>
+    <div class="web">
+      <div class="ham-menu"></div>
+      {% include contact-form.html %}
+      <div class="nav-modal">
+        <div class="inner">
+          <img src="/images/logo.png" class="modal-logo"/>
+          <div class="menu-close"></div>
+          <ul class="nav">
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/listings.html" class="active">LISTINGS</a></li>
+            <li><a href="#">EXPERIENCE</a></li>
+            <li><a href="/about.html">ABOUT </a></li>
+            <li><a class="contact-us-link">CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div id="container-listing" class="container-fluid">
+        <img src="/images/logo.png" class="logo-upper-left"/>
+        {% if page.property-header %}
+          <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
+        {% else %}
+          <div id="header-listings" class="background-header"></div>
+        {% endif %}
+        <div id="listings-content">
+          <div id="header-text-listings">{{ page.location }}</div>
+          <div class="container">
+            <div id="listings-sidebar">
+              <div class="menu-top">
+                <div class="buttons">
+                  <a href="#" class="cool-button">CHECK AVAILABILITY</a>
+                  <a href="#" class="cool-button">REQUEST BROCHURE</a>
+                </div>
               </div>
-              <div class="listing-image-gallery">
-                <div class="listing-carousel">
-                  {% for img-src in page.gallery-images %}
-                  <img src={{ img-src }} class="img-responsive listing-image"/>
+              <div class="menu">
+                <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
+                <hr class ="light-line">
+                <ul class="bond-list">
+                  {% for highlight in page.highlights %}
+                    <li>{{ highlight }}</li>
+                    <hr>
                   {% endfor %}
-                </div>
-                <div class="gallery-arrow-container">
-                  <div class="gallery-arrow-left gallery-navigation"></div>
-                  <div class="gallery-arrow-right gallery-navigation"></div>
-                </div>
+                </ul>
+                <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
+                <hr class="light-line">
+                <ul class="bond-list">
+                  {% for amenity in page.amenities %}
+                  <li>{{ amenity }}</li>
+                  <hr>
+                  {% endfor %}
+                </ul>
               </div>
             </div>
-            <div class="info-box">
-              <h2 class="title">LOCATION</h2>
-              <div id="about-google-map"></div>
-              <h2 class="title">FLOORPLAN</h2>
-              <img src="{{ page.floorplan-image }}" class="img-responsive" />
+            <div id="listings-info">
+              <div class="info-box">
+                <div class="info-text">
+                  <h2 class="title">
+                    {{ page.info-title }}
+                  </h2>
+                  <p>
+                    {{ page.info-text }}
+                  </p>
+                </div>
+                <div class="listing-image-gallery">
+                  <div class="listing-carousel">
+                    {% for img-src in page.gallery-images %}
+                    <img src={{ img-src }} class="img-responsive listing-image"/>
+                    {% endfor %}
+                  </div>
+                  <div class="gallery-arrow-container">
+                    <div class="gallery-arrow-left gallery-navigation"></div>
+                    <div class="gallery-arrow-right gallery-navigation"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="info-box">
+                <h2 class="title">LOCATION</h2>
+                <div id="about-google-map"></div>
+                <h2 class="title">FLOORPLAN</h2>
+                <img src="{{ page.floorplan-image }}" class="img-responsive" />
+              </div>
             </div>
           </div>
         </div>
       </div>
+      {% include footer.html %}
     </div>
-    {% include footer.html %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="../scripts/script.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
