--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -29,6 +29,7 @@
     });</script>
   </head>
   <body>
+    <div class="web">
     {% include contact-form.html %}
     <div class="nav-modal">
       <div class="inner">
@@ -135,6 +136,7 @@
       </div>
     </div>
     {% include footer.html %}
+   </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
       <script type="text/javascript" src="scripts/script.js"></script>
     </body>
