--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -107,8 +107,9 @@
     }
   }
 }
-.web {
-  display: none !important;
+
+.print {
+  display: none;
 }
 
 #container-listing {
@@ -359,10 +360,12 @@
   }
 }
 
-// @media print {
-//   .location {
-//     box-shadow: 0px 0px 18px 6px #f2f2f2;
-//     -webkit-filter: drop-shadow(4px 4px 1px #f2f2f2);
-//     text-shadow: 4px 4px 1px #ccc;
-//   }
-// }
+@media print {
+  display: block;
+  }
+  .web {
+    display: none;
+  }
+}
+
+
