Stop using a special title for the print version.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -25,7 +25,7 @@
         </div>
         <div class="information">
           <div class="text">
-            <h4>{{page.info-title-print}}</h4>
+            <h4>{{page.info-title}}</h4>
             <p>{{page.info-text}}</p>
           </div>
           <div class="location">
