Hook in logic for the print brochure button. Include a silhouette image for agents without an image. Update agent bios.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -98,7 +98,7 @@
               <div class="menu-top">
                 <div class="buttons">
                   <a href="#" class="cool-button">CHECK AVAILABILITY</a>
-                  <a href="#" class="cool-button">REQUEST BROCHURE</a>
+                  <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
                 </div>
               </div>
               <div class="menu">
