--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -219,6 +219,7 @@
       line-height: 1.8;
       padding: 28px 12px 2px 12px;
       text-align: left;
+      height: 125px;
     }
     .bio-button {
       display: inline-block;
